feat(devotg): added connectome data, updated docs, and examples

--- a/notebooks/01_cell_lineage_data_analysis.ipynb
+++ b/notebooks/01_cell_lineage_data_analysis.ipynb
@@ -36,13 +36,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /home/jayag/projects/DevoTG/notebooks\n"
+      "Current working directory: /home/jayag/projects/DevoTG_final_exp/notebooks\n"
      ]
     }
    ],
    "source": [
-    "# # ## print current path\n",
-    "from pathlib import Path\n",
+    "### print current path\n",
     "print(f\"Current working directory: {Path.cwd()}\")"
    ]
   },
@@ -106,7 +105,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "csv_path = '../data/raw/cells_birth_and_pos.csv'\n",
+    "csv_path = '../data/cell_lineage_datasets/cells_birth_and_pos.csv'\n",
     "\n",
     "# Initialize loader\n",
     "loader = DatasetLoader(default_csv_path=csv_path)\n",
@@ -651,14 +650,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysis results saved to: ../outputs/statistics/detailed_analysis_results.json\n",
-      "Detailed results saved to: ../outputs/statistics/detailed_analysis_results.json\n"
+      "Analysis results saved to: ../outputs/lineage_analysis/statistics/detailed_analysis_results.json\n",
+      "Detailed results saved to: ../outputs/lineage_analysis/statistics/detailed_analysis_results.json\n"
      ]
     }
    ],
    "source": [
     "# Save detailed analysis results\n",
-    "output_dir = Path('../outputs/statistics')\n",
+    "output_dir = Path('../outputs/lineage_analysis/statistics')\n",
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "analyzer.save_results(output_dir / 'detailed_analysis_results.json')\n",
@@ -994,18 +993,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created directory: ../outputs/statistics\n",
-      "Created directory: ../outputs/dataset_processing\n",
-      "Created directory: ../outputs/visualizations\n"
+      "Created directory: ../outputs/lineage_analysis/statistics\n",
+      "Created directory: ../data/processed_datasets\n",
+      "Created directory: ../outputs/lineage_analysis/visualizations\n"
      ]
     }
    ],
    "source": [
     "# Create output directories\n",
     "output_dirs = {\n",
-    "    'statistics': Path('../outputs/statistics'),\n",
-    "    'processed_data': Path('../outputs/dataset_processing'),\n",
-    "    'visualizations': Path('../outputs/visualizations')\n",
+    "    'statistics': Path('../outputs/lineage_analysis/statistics'),\n",
+    "    'processed_data': Path('../data/processed_datasets'),\n",
+    "    'visualizations': Path('../outputs/lineage_analysis/visualizations')\n",
     "}\n",
     "\n",
     "for name, path in output_dirs.items():\n",
@@ -1028,7 +1027,7 @@
       "✓ Spatial analysis completed\n",
       "✓ Lineage analysis completed\n",
       "✓ Correlation analysis completed\n",
-      "Report saved to: ../outputs/statistics/comprehensive_analysis_report.json\n",
+      "Report saved to: ../outputs/lineage_analysis/statistics/comprehensive_analysis_report.json\n",
       "\n",
       "📊 Comprehensive analysis report generated and saved.\n"
      ]
@@ -1052,8 +1051,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "💾 Processed dataset exported to: ../outputs/dataset_processing/processed_cell_data.csv\n",
-      "   Added columns: ['size_category', 'time_category']\n"
+      "💾 Processed dataset exported to: ../data/processed_datasets/processed_cell_data.csv\n",
+      "   Added columns: ['time_category', 'size_category']\n"
      ]
     }
    ],
@@ -1092,7 +1091,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🎯 Thresholds exported to: ../outputs/dataset_processing/calculated_thresholds.json\n",
+      "🎯 Thresholds exported to: ../data/processed_datasets/calculated_thresholds.json\n",
       "   These can be loaded in visualization notebooks for consistent categorization.\n"
      ]
     }
@@ -1119,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1144,14 +1143,14 @@
       "   • Time (mid/late): 337.83\n",
       "\n",
       "📁 Generated Outputs:\n",
-      "   • statistics: 2 files in ../outputs/statistics\n",
-      "   • processed_data: 3 files in ../outputs/dataset_processing\n",
-      "   • visualizations: 12 files in ../outputs/visualizations\n",
+      "   • statistics: 9 files in ../outputs/lineage_analysis/statistics\n",
+      "   • processed_data: 8 files in ../data/processed_datasets\n",
+      "   • visualizations: 13 files in ../outputs/lineage_analysis/visualizations\n",
       "\n",
       "➡️  Next Steps:\n",
       "   • Run 02_visualization.ipynb for interactive plots\n",
       "   • Run 03_tgn_training.ipynb for machine learning analysis\n",
-      "   • Explore outputs/ directory for detailed results\n",
+      "   • Explore outputs/lineage_analysis/ directory for detailed results\n",
       "\n",
       "✅ Data analysis notebook completed successfully!\n"
      ]
@@ -1180,9 +1179,9 @@
     "    print(f\"   • {name}: {len(files)} files in {path}\")\n",
     "\n",
     "print(\"\\n➡️  Next Steps:\")\n",
-    "print(\"   • Run 02_visualization.ipynb for interactive plots\")\n",
+    "print(\"   • Run 02_cell_lineage_visualization.ipynb for interactive plots\")\n",
     "print(\"   • Run 03_tgn_training.ipynb for machine learning analysis\")\n",
-    "print(\"   • Explore outputs/ directory for detailed results\")\n",
+    "print(\"   • Explore outputs/lineage_analysis/ directory for detailed results\")\n",
     "\n",
     "print(\"\\n✅ Data analysis notebook completed successfully!\")"
    ]
@@ -1204,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
