--- a/notebooks/02_cell_lineage_visualization.ipynb
+++ b/notebooks/02_cell_lineage_visualization.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory: /home/jayag/projects/DevoTG/notebooks\n"
+      "Current working directory: /home/jayag/projects/DevoTG_final_exp/notebooks\n"
      ]
     }
    ],
@@ -106,8 +106,8 @@
    ],
    "source": [
     "# Load processed data and thresholds from previous analysis\n",
-    "data_path = '../outputs/dataset_processing/processed_cell_data.csv'\n",
-    "thresholds_path = '../outputs/dataset_processing/calculated_thresholds.json'\n",
+    "data_path = '../data/processed_datasets/processed_cell_data.csv'\n",
+    "thresholds_path = '../data/processed_datasets/calculated_thresholds.json'\n",
     "\n",
     "try:\n",
     "    # Load processed data\n",
@@ -123,7 +123,7 @@
     "    print(\"⚠️  Processed data not found. Loading raw data and calculating thresholds...\")\n",
     "    \n",
     "    # Fallback to raw data\n",
-    "    loader = DatasetLoader('../data/raw/cells_birth_and_pos.csv')\n",
+    "    loader = DatasetLoader('../data/cell_lineage_datasets/cells_birth_and_pos.csv')\n",
     "    df = loader.load_csv()\n",
     "    \n",
     "    # Calculate thresholds\n",
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/static_plot_generation.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/static_plot_generation.png\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
     "plt.show()\n",
     "\n",
     "# Save the figure\n",
-    "output_dir = Path('../outputs/visualizations')\n",
+    "output_dir = Path('../outputs/lineage_analysis/visualizations')\n",
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "fig_gen.savefig(output_dir / 'static_plot_generation.png', dpi=300, bbox_inches='tight')\n",
     "print(f\"💾 Saved: {output_dir / 'static_plot_generation.png'}\")"
@@ -281,7 +281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/static_plot_size.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/static_plot_size.png\n"
      ]
     }
    ],
@@ -323,7 +323,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/static_plot_time.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/static_plot_time.png\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/division_patterns_analysis.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/division_patterns_analysis.png\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
      "text": [
       "🎮 Creating interactive 3D visualization...\n",
       "\n",
-      "💾 Interactive plot saved: ../outputs/visualizations/interactive_cell_division_plot.html\n",
+      "💾 Interactive plot saved: ../outputs/lineage_analysis/visualizations/interactive_cell_division_plot.html\n",
       "   This can be opened in any web browser for interactive exploration.\n"
      ]
     }
@@ -437,10 +437,10 @@
      "text": [
       "\n",
       "🎮 Creating interactive plot colored by size...\n",
-      "💾 Saved: ../outputs/visualizations/interactive_plot_size.html\n",
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/interactive_plot_size.html\n",
       "\n",
       "🎮 Creating interactive plot colored by time...\n",
-      "💾 Saved: ../outputs/visualizations/interactive_plot_time.html\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/interactive_plot_time.html\n"
      ]
     }
    ],
@@ -484,7 +484,7 @@
       "🔍 Root of 'ABpl' is 'P0'\n",
       "Max tree depth: 12\n",
       "✅ Created animation with 4 steps showing path: P0 → AB → ABp → ABpl\n",
-      "💾 Saved animated lineage: ../outputs/visualizations/lineage_animation_ABpl.html\n"
+      "💾 Saved animated lineage: ../outputs/lineage_analysis/visualizations/lineage_animation_ABpl.html\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
      "output_type": "stream",
      "text": [
       "🎥 Creating matplotlib animation...\n",
-      "💾 Animation saved as video: ../outputs/visualizations/cell_division_animation.mp4\n"
+      "💾 Animation saved as video: ../outputs/lineage_analysis/visualizations/cell_division_animation.mp4\n"
      ]
     },
     {
@@ -604,7 +604,7 @@
      "output_type": "stream",
      "text": [
       "💾 Exporting processed visualization data...\n",
-      "Data exported to ../outputs/dataset_processing/visualization_ready_data.csv\n",
+      "Data exported to ../data/processed_datasets/visualization_ready_data.csv\n",
       "✅ Exported 642 records with visualization features\n",
       "\n",
       "Sample of exported data:\n"
@@ -744,7 +744,7 @@
     "print(\"💾 Exporting processed visualization data...\")\n",
     "\n",
     "# Export the enhanced dataset\n",
-    "export_path = output_dir.parent / 'dataset_processing' / 'visualization_ready_data.csv'\n",
+    "export_path = Path(\"../data\") / 'processed_datasets' / 'visualization_ready_data.csv'\n",
     "export_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "exported_data = visualizer.export_data(str(export_path))\n",
@@ -764,7 +764,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📋 Visualization summary saved: ../outputs/visualizations/visualization_summary.json\n"
+      "📋 Visualization summary saved: ../outputs/lineage_analysis/visualizations/visualization_summary.json\n"
      ]
     }
    ],
@@ -838,7 +838,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/time_progression_analysis.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/time_progression_analysis.png\n"
      ]
     }
    ],
@@ -908,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "💾 Saved: ../outputs/visualizations/generation_analysis.png\n"
+      "💾 Saved: ../outputs/lineage_analysis/visualizations/generation_analysis.png\n"
      ]
     }
    ],
@@ -1005,16 +1005,17 @@
       "      • static_plot_generation.png\n",
       "      • static_plot_time.png\n",
       "      • division_patterns_analysis.png\n",
-      "   🎮 Interactive plots: 4 files\n",
+      "   🎮 Interactive plots: 5 files\n",
       "      • interactive_cell_division_plot.html\n",
+      "      • interactive_plot_generation.html\n",
       "      • lineage_animation_ABpl.html\n",
       "      • interactive_plot_size.html\n",
       "      • interactive_plot_time.html\n",
       "   🎥 Animations: 1 files\n",
       "      • cell_division_animation.mp4\n",
       "\n",
-      "📁 Output Directory: ../outputs/visualizations\n",
-      "   Total files created: 12\n",
+      "📁 Output Directory: ../outputs/lineage_analysis/visualizations\n",
+      "   Total files created: 13\n",
       "\n",
       "🎯 Key Features Demonstrated:\n",
       "   • Static 3D plots with multiple color schemes\n",
@@ -1039,7 +1040,7 @@
       "   • Use exported data for custom analysis\n",
       "\n",
       "✅ Visualization notebook completed successfully!\n",
-      "🎉 All visualizations saved to: ../outputs/visualizations\n"
+      "🎉 All visualizations saved to: ../outputs/lineage_analysis/visualizations\n"
      ]
     }
    ],
