--- a/notebooks/01_cell_lineage_data_analysis.ipynb
+++ b/notebooks/01_cell_lineage_data_analysis.ipynb
@@ -17,37 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### define path for indexing correctly\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd().parent))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current working directory: /home/jayag/projects/DevoTG_final_exp/notebooks\n"
-     ]
-    }
-   ],
-   "source": [
-    "### print current path\n",
-    "print(f\"Current working directory: {Path.cwd()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +31,15 @@
    ],
    "source": [
     "# Import required libraries\n",
+    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
+    "\n",
+    "# Add parent directory to path to import custom modules\n",
+    "sys.path.append(str(Path.cwd().parent))\n",
     "\n",
     "# Import DevoTG modules\n",
     "from devotg.data import DatasetLoader\n",
@@ -90,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1026,7 @@
      "text": [
       "\n",
       "💾 Processed dataset exported to: ../data/processed_datasets/processed_cell_data.csv\n",
-      "   Added columns: ['time_category', 'size_category']\n"
+      "   Added columns: ['size_category', 'time_category']\n"
      ]
     }
    ],
@@ -1083,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1122,7 @@
       "   • visualizations: 13 files in ../outputs/lineage_analysis/visualizations\n",
       "\n",
       "➡️  Next Steps:\n",
-      "   • Run 02_visualization.ipynb for interactive plots\n",
+      "   • Run 02_cell_lineage_visualization.ipynb for interactive plots\n",
       "   • Run 03_tgn_training.ipynb for machine learning analysis\n",
       "   • Explore outputs/lineage_analysis/ directory for detailed results\n",
       "\n",
@@ -1181,6 +1155,7 @@
     "print(\"\\n➡️  Next Steps:\")\n",
     "print(\"   • Run 02_cell_lineage_visualization.ipynb for interactive plots\")\n",
     "print(\"   • Run 03_tgn_training.ipynb for machine learning analysis\")\n",
+    "print(\"   • Run 04_connectome_development_analysis.ipynb for connectome studies\")\n",
     "print(\"   • Explore outputs/lineage_analysis/ directory for detailed results\")\n",
     "\n",
     "print(\"\\n✅ Data analysis notebook completed successfully!\")"
@@ -1203,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
