--- a/notebooks/02_cell_lineage_visualization.ipynb
+++ b/notebooks/02_cell_lineage_visualization.ipynb
@@ -19,37 +19,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "### define path for indexing correctly\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd().parent))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current working directory: /home/jayag/projects/DevoTG_final_exp/notebooks\n"
-     ]
-    }
-   ],
-   "source": [
-    "# # ## print current path\n",
-    "from pathlib import Path\n",
-    "print(f\"Current working directory: {Path.cwd()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -62,10 +31,14 @@
    ],
    "source": [
     "# Import required libraries\n",
+    "import sys\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "import json\n",
+    "\n",
+    "# Add parent directory to path to import custom modules\n",
+    "sys.path.append(str(Path.cwd().parent))\n",
     "\n",
     "# Import DevoTG modules\n",
     "from devotg.data import DatasetLoader\n",
@@ -89,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1036,6 +1009,7 @@
       "\n",
       "➡️  Next Steps:\n",
       "   • Run 03_tgn_training.ipynb for temporal graph neural network analysis\n",
+      "   • Run 04_connectome_development_analysis.ipynb for connectome studies\n",
       "   • Explore generated HTML files for interactive features\n",
       "   • Use exported data for custom analysis\n",
       "\n",
@@ -1094,6 +1068,7 @@
     "\n",
     "print(\"\\n➡️  Next Steps:\")\n",
     "print(\"   • Run 03_tgn_training.ipynb for temporal graph neural network analysis\")\n",
+    "print(\"   • Run 04_connectome_development_analysis.ipynb for connectome studies\")\n",
     "print(\"   • Explore generated HTML files for interactive features\")\n",
     "print(\"   • Use exported data for custom analysis\")\n",
     "\n",
